# fedmoe_plots

./: .gitignore  .pre-commit-config.yaml  .yamllint.yml  README.md  pyproject.toml
.github/: CODEOWNERS.md
.github/instructions/: copilot_ins.instructions.md
fedmoe_plots/: __init__.py  data_analysis.py  parameter_counting.py  plotting_utils.py  wall_time_model.py  wall_time_model_throughput.py  wandb_utils.py
fedmoe_plots/notebooks/: expert_collapse_analysis.ipynb  experts_density.ipynb  mup_completep_scaling.ipynb  wall_clock_time_model.ipynb  wall_clock_time_model_throughput.ipynb
fedmoe_plots/notebooks/mlsys26/: completep_scaling.ipynb  model_partitioning_stats.ipynb
